oldworkflows/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-project-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /getToDos
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /add
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /frontend-health
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /isDone/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 2345
